--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^2.0.0-next.3e165448"
+    "react-scripts": "^2.0.0-next.3e165448",
+    "prop-types": "^15.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
