--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-responsive": "^5.0.0",
     "react-scripts": "^2.0.0-next.3e165448",
-    "prop-types": "^15.6.2"
+    "react-sticky-el": "^1.0.17",
+    "react-transition-group": "^1.2.1",
+    "velocity-animate": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
