--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.4.1",
     "react-responsive": "^5.0.0",
     "react-scripts": "^2.0.0-next.3e165448",
+    "react-scrolllock": "^3.0.1",
     "react-sticky-el": "^1.0.17",
     "react-transition-group": "^1.2.1",
     "velocity-animate": "^1.5.1"
