--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-responsive": "^5.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.0-next.3e165448",
     "react-scrolllock": "^3.0.1",
     "react-sticky-el": "^1.0.17",
