--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:ci": "npm run build && mv ./build/index.html ./build/200.html",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
